--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,38 +1,14 @@
-body {
-    ;
-}
-
-/* a {
-    text-decoration: none;
-    color: inherit;
-} */
-
-/* img {
-    max-width: 100%;
-    display: block;
-} */
-
-/* Header Styles */
 .div1 {
     background-color: #232f3e;
     color: white;
-    /* padding: 10px 20px; */
 }
 
 .subdiv1 {
-    display: flex;
-    /* justify-content: space-between; */
     align-items: center;
+    display: flex;
 }
 
-/* .search {
-    flex: 1;
-    display: flex;
-} */
-
 .top-icons div {
-    /* margin-left: 15px;
-    cursor: pointer; */
     display: flex;
 }
 
@@ -41,8 +17,6 @@ body {
 }
 
 .below-top-icons {
-    /* justify-content: space-around;
-    padding: 10px 0; */
     background-color: #37475a;
     display: flex;
 }
@@ -53,36 +27,10 @@ body {
     text-align: center;
 }
 
-/* .below-top-icons div {
-    cursor: pointer;
-} */
-
-/* Main Content */
-/* .div-boxes {
-    padding: 20px;
-} */
-
-/* .div-boxes-children {
-    margin-top: 30px;
-} */
-
-/* .items {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-} */
-
 .items-unit {
-    /* border: 1px solid #ddd;
-    padding: 10px;
-    border-radius: 5px; */
     text-align: center;
     background: #f9f9f9;
 }
-
-/* .items-unit p {
-    margin: 10px 0;
-} */
 
 .items-unit img{
     width: 25%;
@@ -91,4 +39,5 @@ body {
 
 section {
     font-family: "Playwrite AU VIC Guides", serif;
+    background-image: url('Images/rome-cathedral.jpg');
 }
